--- a/src/scripts/requirements.txt
+++ b/src/scripts/requirements.txt
@@ -33,5 +33,6 @@ types-requests==2.30.0.0
 types-urllib3==1.26.25.13
 typing_extensions==4.5.0
 urllib3==2.0.3
+uWSGI==2.0.22
 virtualenv==20.24.2
 Werkzeug==2.3.6
