--- a/src/gunicorn.service
+++ b/src/gunicorn.service
@@ -5,6 +5,6 @@ After=network.target
 User=ec2-user
 Group=ec2-user
 WorkingDirectory=/var/www/webapp
-ExecStart=/var/www/webapp/src/venv/bin/gunicorn app
+ExecStart=/var/www/webapp/src/venv/bin/gunicorn --bind 0.0.0.0:8080 wsgi:app
 [Install]
 WantedBy=multi-user.target
