Adding support for data-collector App

--- a/applications/web-server/src/gunicorn.config
+++ b/applications/web-server/src/gunicorn.config
@@ -1,10 +1,10 @@
 [Unit]
-Description=Gunicorn daemon to serve my flaskapp
+Description=Gunicorn daemon to serve my Web Server
 After=network.target
 [Service]
 User=ec2-user
 Group=ec2-user
 WorkingDirectory=/var/www/webapp/applications/web-server/src/
-ExecStart=gunicorn --bind 0.0.0.0:8080 wsgi:app
+ExecStart=gunicorn --bind 0.0.0.0:8080 app:app
 [Install]
 WantedBy=multi-user.target
