--- a/appspec.yml
+++ b/appspec.yml
@@ -4,9 +4,9 @@ files:
   - source: /
     destination: /var/www/webapp
   - source: applications/web-server/src/gunicorn-web.service
-    destination: /etc/systemd/system/gunicorn-web.service
+    destination: /etc/systemd/system/
   - source: applications/data-collector/src/gunicorn-collector.service
-    destination: /etc/systemd/system/gunicorn-collector.service
+    destination: /etc/systemd/system/
 hooks:
   BeforeInstall:
     - location: applications/web-server/src/scripts/install_dependencies.sh
