--- a/appspec.yml
+++ b/appspec.yml
@@ -9,16 +9,10 @@ files:
     destination: /etc/systemd/system/
 hooks:
   BeforeInstall:
-    - location: applications/web-server/src/scripts/venv.sh
-      timeout: 300
-      runas: root
-    - location: applications/data-collector/src/scripts/venv.sh
+    - location: applications/build/venv.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: applications/web-server/src/scripts/start_service.sh
-      timeout: 300
-      runas: root
-    - location: applications/data-collector/src/scripts/start_service.sh
+    - location: applications/build/start_services.sh
       timeout: 300
       runas: root
