--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -28,7 +28,7 @@ jobs:
         run: python -c "import sys; print(sys.version)"
         # Install the package using the setup.py
       - name: Install venv and dependencies
-        run: ./build/venv.sh
+        run: sudo ./build/venv.sh
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run web-server tests
         run: python3 -m pytest web-server/ -v
