Adding initial Github Action workflow for CI testing

--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -28,7 +28,9 @@ jobs:
         run: python -c "import sys; print(sys.version)"
         # Install the package using the setup.py
       - name: Run build script
-        run: ./.github/build/venv.sh
+        run: |
+          cd ./build
+          ./venv.sh
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run web-server tests
         run: python3 -m pytest web-server/ -v
