Added /health API healthcheck Integration test

--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -36,3 +36,5 @@ jobs:
         run: python3 -m pytest ./applications/web-server/ -v
       - name: Run data-collector tests
         run: python3 -m pytest ./applications/data-collector/ -v
+      - name: Run data-analyzer tests
+        run: python3 -m pytest ./applications/data-analyzer/ -v
