--- a/applications/data-analyzer/src/main/gunicorn-analyzer.service
+++ b/applications/data-analyzer/src/main/gunicorn-analyzer.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn daemon to serve my Data Collector
+Description=Gunicorn daemon to serve Data Analyzer app
 After=network.target
 [Service]
 User=ec2-user
