--- a/applications/data-collector/src/main/gunicorn-collector.service
+++ b/applications/data-collector/src/main/gunicorn-collector.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn daemon to serve my Data Collector
+Description=Gunicorn daemon to serve Data Collector app
 After=network.target
 [Service]
 User=ec2-user
